--- a/css/variables.scss
+++ b/css/variables.scss
@@ -22,6 +22,7 @@ $pattern2:  $darkGreen;
 $pattern3:  #433E3F;
 $pattern4: #36324b;
 $pattern5: #5a6872;
+$pattern6: #5d415b;
 
 $textColor : $grey8;
 
