--- a/css/variables.scss
+++ b/css/variables.scss
@@ -18,11 +18,12 @@ $blue : #009bff;
 $lt-blue : #00c4ff;
 
 $pattern1: #5d4a42;
-$pattern2:  $darkGreen;
+$pattern2:  #5d415b;
 $pattern3:  #433E3F;
 $pattern4: #36324b;
 $pattern5: #5a6872;
 $pattern6: #5d415b;
+$pattern7: #2b4c3c;
 
 $textColor : $grey8;
 
