--- a/css/index.scss
+++ b/css/index.scss
@@ -595,7 +595,7 @@ ul {
   @include section-container();
   @include icon-background($pattern7, 'gallery');
 
-  #picture-gallery {
+  #picture-gallery, #video-gallery {
     font-size: 0;
 
     .picture {
@@ -622,6 +622,13 @@ ul {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center center;
+      }
+
+      h5 {
+        text-align: center;
+        font-size: $fontNormal;
+        color: $black;
+        margin: $spaceSmall auto;
       }
 
       @include small_and_down() {
